Markdown post functionality added

--- a/src/templates/blog.jade
+++ b/src/templates/blog.jade
@@ -1,4 +1,4 @@
-h1(data-page-title="Contact Us") This is the blog landing page
+h1(data-page-title="Blog") This is the blog landing page
 
 h2 Here are the blog posts:
 
