--- a/src/templates/parts/header.jade
+++ b/src/templates/parts/header.jade
@@ -1,6 +1,6 @@
 header(role="header")
 	a#skip2content(href="#") Skip to main content
-	#a11y_announcer(aria-live="polite")
+	#a11y_announcer.vh(aria-live="polite")
 	h1 Modern A11y
 nav(role="navigation")
 	a(href="#/") Home
