--- a/src/templates/contact.jade
+++ b/src/templates/contact.jade
@@ -1,6 +1,6 @@
-h1(data-page-title="Contact Us") This is the contact page!
+h2(data-page-title="Contact Us") This is the contact page!
 
-h2 Have something to say? Let us know what you think! Yeah!
+h3 Have something to say? Let us know what you think! Yeah!
 
 form(method="", action="")
 	.field
@@ -8,7 +8,7 @@ form(method="", action="")
 		input#name
 	.field
 		label(for="email") Email
-		input#name
+		input#email
 	.field
 		label(for="topic") Topic
 		select#topic
