--- a/src/templates/parts/header.jade
+++ b/src/templates/parts/header.jade
@@ -1,9 +1,10 @@
 header(role="header")
-	a#skip2content(href="#") Skip to main content
-	#a11y_announcer.vh(aria-live="polite")
-	h1 Modern A11y
-nav(role="navigation")
-	a(href="#/") Home
-	a(href="#/blog") Blog
-	a(href="#/contact") Contact
-	a(href="#/about") About	
+	.inner
+		a#skip2content(href="#") Skip to main content
+		#a11y_announcer.vh(aria-live="polite")
+		h1 Modern A11y
+		nav(role="navigation")
+			a(href="#/") Home
+			a(href="#/blog") Blog
+			a(href="#/contact") Contact
+			a(href="#/about") About	
