--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -23,7 +23,7 @@ body
 .inner
 	max-width: 1280px
 	margin: 0 auto
-	padding: 0 20px 0 0
+	padding: 0 20px
 
 
 
@@ -44,7 +44,7 @@ body
 		top: 0
 
 header
-	background: url($header_background_image) repeat-x 0 0
+	background: url($header_background_image) repeat-x 0 0 #679fff
 	height: 60px
 	border-bottom: solid $primary_dark_text_color 1px
 	box-shadow: 0 0 8px 3px rgba(0,35,94,0.4)
@@ -65,7 +65,7 @@ header
 			background-color: rgba(255,255,255,.6)
 			border: 1px solid rgba(0,70,188,.4)
 			box-shadow: rgba(255,255,255,0.15) 0 1px 0px, inset rgba(0,0,0,0.17) 0 1px 1px
-			text-shadow: none
+			text-shadow: rgba(255,255,255, 0.3) 0 1px 0
 			outline: none
 
 	h1, a, nav
@@ -77,6 +77,22 @@ header
 
 h2
 	color: $primary_dark_text_color
+
+
+.articles
+	max-width: 200px
+	a
+		display: block
+		padding: 10px 15px
+		font-size: 12px
+		text-decoration: none
+		border: 1px solid #ccc
+		color: $primary_dark_text_color
+		text-transform: uppercase
+		font-weight: bold
+		&:hover
+			color: #333
+			background-color: #f9e7e4
 
 
 footer, main
