--- a/src/templates/parts/master.jade
+++ b/src/templates/parts/master.jade
@@ -10,7 +10,7 @@ head
 
 body(ng-app="modern_a11y")
 	include header
-	main(role="main")
+	main#main_content(role="main")
 		.inner(ng-view="")
 			block main
 
