--- a/src/templates/parts/header.jade
+++ b/src/templates/parts/header.jade
@@ -1,6 +1,6 @@
 header(role="header")
 	.inner
-		a#skip2content(href="#") Skip to main content
+		a#skip2content(href="#main_content") Skip to main content
 		#a11y_announcer.vh(aria-live="polite")
 		h1 Modern A11y
 		nav(role="navigation")
