--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -87,12 +87,26 @@ h2
 		font-size: 12px
 		text-decoration: none
 		border: 1px solid #ccc
+		border-collapse: collapse
 		color: $primary_dark_text_color
 		text-transform: uppercase
 		font-weight: bold
+		background-color: #fff
 		&:hover
 			color: #333
 			background-color: #f9e7e4
+
+table
+	th, td
+		text-align: left
+		padding: 5px 10px
+		border: 1px solid #ccc
+	th
+		background-color: #efefef
+	td
+		background-color: #fff
+
+
 
 
 footer, main
