In progress - New articles, styling tweaks

--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -20,6 +20,12 @@ body
 	height: 1px
 	overflow: hidden
 
+.testing
+	position: absolute
+	top: 0
+	left: -9999em
+	display: block !important
+
 .inner
 	max-width: 1280px
 	margin: 0 auto
@@ -78,6 +84,9 @@ header
 h2
 	color: $primary_dark_text_color
 
+
+.hidden
+	display: none
 
 .articles
 	max-width: 200px
