--- a/src/templates/parts/header.jade
+++ b/src/templates/parts/header.jade
@@ -1,4 +1,4 @@
-header(role="header")
+header(role="banner")
 	.inner
 		a#skip2content(href="#main_content") Skip to main content
 		#a11y_announcer.vh(aria-live="polite")
