--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -48,6 +48,9 @@ a
 	text-decoration: none
 	color: $link_text_hover
 
+img
+	width: 100%
+
 
 header
 	background-image: linear-gradient(#333, #666)
