Updates to new a11ywin arialabelledby article

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -13,3 +13,7 @@ $primary_dark_text_color: #002e95
 $primary_light_text_color: #5a716e
 
 $link_text_hover: #4cb5ff
+
+$blockquote_bkgd_color: #efefef
+$blockquote_border_color: #ccc
+$blockquote_text_color: #333
