--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -118,5 +118,11 @@ table
 footer, main
 	padding: 20px 0 0
 
-
+blockquote
+	background-color: $blockquote_bkgd_color
+	border: 1px solid $blockquote_border_color
+	border-width: 1px 0
+	padding: 1rem 2rem
+	margin: 0
+	color: $blockquote_text_color
 
