Added Using Tabindex article

--- a/src/sass/_global.sass
+++ b/src/sass/_global.sass
@@ -95,6 +95,7 @@ h2
 	font-size: 3.2rem
 	line-height: 3.6rem
 h3
+	margin: 3rem 0 0 0
 	font-size: 2.2rem
 	line-height: 2.5rem
 
@@ -104,6 +105,7 @@ h3
 
 table
 	th, td
+		vertical-align: top	
 		text-align: left
 		padding: 5px 10px
 		border: 1px solid #ccc
