--- a/src/templates/parts/mixins.jade
+++ b/src/templates/parts/mixins.jade
@@ -1,7 +1,10 @@
 mixin pubdate(val)
 	-var months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-	-var month = parseInt(val.toString().substr(4,2));
+	-var month = parseInt(val.pubdate.toString().substr(4,2)) - 1;
 	time 
 		.month #{months[month]}
-		.day #{val.toString().substr(2,2)}
-		.year #{val.toString().substr(0,4)}
+		.day #{val.pubdate.toString().substr(2,2)}
+		.year #{val.pubdate.toString().substr(0,4)}
+mixin summary(val)
+	-var summary = val.summary? val.summary : '...';
+	.summary #{summary}
