--- a/src/templates/parts/master.jade
+++ b/src/templates/parts/master.jade
@@ -1,21 +1,17 @@
 doctype
-<!--[if lt IE 7 ]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7 ]>         <html class="no-js lt-ie9 lt-ie8">       <![endif]-->
-<!--[if IE 8 ]>         <html class="no-js ie8 lt-ie9">          <![endif]-->
-<!--[if gt IE 8 ]><!--> <html class="no-js" lang="en">       <!--<![endif]-->
+html(lang="en")
+	head
+		include mixins
+		block head
+		include head
 
-head
-	include mixins
-	block head
-	include head
+	body(ng-app="modern_a11y")
+		.shell(data-isolate)
+			include header
+			main#main_content(role="main")
+				.inner(ng-view="")
+					block main
 
-body(ng-app="modern_a11y")
-	.shell(data-isolate)
-		include header
-		main#main_content(role="main")
-			.inner(ng-view="")
-				block main
-
-		include footer
-	include scripts
-	include modals
+			include footer
+		include scripts
+		include modals
