--- a/src/templates/parts/mixins.jade
+++ b/src/templates/parts/mixins.jade
@@ -3,8 +3,16 @@ mixin pubdate(val)
 	-var month = parseInt(val.pubdate.toString().substr(4,2)) - 1;
 	time 
 		.month #{months[month]}
-		.day #{val.pubdate.toString().substr(2,2)}
+		.day #{val.pubdate.toString().substr(6,2)}
 		.year #{val.pubdate.toString().substr(0,4)}
 mixin summary(val)
 	-var summary = val.summary? val.summary : '...';
 	.summary #{summary}
+
+mixin sort_articles(articles)
+	- articles.sort(function (a, b) {
+		- if(a.pubdate > b.pubdate) return -1
+		- if(a.pubdate < b.pubdate)	return 1
+		- return 0
+	- });
+	- return articles;
